<resources>
    <string name="app_name" translatable="false">SEI804 CPUInfoOverlay</string>
    <string name="starting">Starting…</string>
    <string name="cpu_index">CPU %d Clock:</string>
    <string name="cpu_governor">CPU Governor:</string>
    <string name="time">Time:</string>
    <string name="overlay_options">Overlay</string>
    <string name="background_options">Background</string>
    <string name="distance_options">Distance</string>
    <string name="corner_options">Rounded corners</string>
    <string name="text_options">Text</string>
    <string name="about">About</string>
    <string name="restart_overlay_toast">Please restart the overlay to see the change.</string>
    <string name="overlay_button">Button for remote control</string>
    <string name="overlay_button_summary">Select the button for the remote control to start the overlay.</string>
    <string name="select_button">Select button</string>
    <string name="right_margin">Right edge margin</string>
    <string name="right_margin_summary">Select the distance to the right edge of the screen for the overlay.</string>
    <string name="top_margin">Top edge margin</string>
    <string name="top_margin_summary">Select the distance to the top edge of the screen for the overlay.</string>
    <string name="both_margin">Middle margin</string>
    <string name="both_margin_summary">Select the distance to the middle of the two overlays.</string>
    <string name="text_size">Text size</string>
    <string name="text_size_summary">Select a text size for the overlay.</string>
    <string name="text_padding_summary">This option can be used to change the distance between the overlay and the text.</string>
    <string name="text_padding">Text padding</string>
    <string name="text_color_left">Left text color</string>
    <string name="text_color_left_summary">Select a text color for the left overlay.</string>
    <string name="text_color_right">Right text color</string>
    <string name="text_color_right_summary">Select a text color for the right overlay.</string>
    <string name="left_text_alignment">Left overlay text alignment</string>
    <string name="left_text_alignment_summary">This option sets the text alignment for the left overlay.</string>
    <string name="right_text_alignment">Right overlay text alignment</string>
    <string name="right_text_alignment_summary">This option sets the text alignment for the right overlay.</string>
    <string name="text_font">Text font</string>
    <string name="text_font_summary">Select a text font for the overlay.</string>
    <string name="background_color_left">Left background color</string>
    <string name="background_color_left_summary">Select a background color for the left overlay.</string>
    <string name="background_color_right">Right background color</string>
    <string name="background_color_right_summary">Select a background color for the right overlay.</string>
    <string name="background_alpha_left">Left background transparency</string>
    <string name="background_alpha_left_summary">Select a background transparency for the left overlay.</string>
    <string name="background_alpha_right">Right background transparency</string>
    <string name="background_alpha_right_summary">Select a background transparency for the right overlay.</string>
    <string name="rounded_corners_left_overall">Rounded corners on all edges on the left overlay</string>
    <string name="rounded_corners_left_overall_summary">This option adds rounded corners to all corners of the left overlay.</string>
    <string name="rounded_corners_right_overall">Rounded corners on all edges on the right overlay</string>
    <string name="rounded_corners_right_overall_summary">This option adds rounded corners to all corners of the right overlay.</string>
    <string name="rounded_corners_left">Left rounded corners</string>
    <string name="rounded_corners_left_summary">Select a rounded corner size for the left overlay.</string>
    <string name="rounded_corners_right">Right rounded corners</string>
    <string name="rounded_corners_right_summary">Select a rounded corner size for the right overlay.</string>
    <string name="long_press">Long button press</string>
    <string name="long_press_summary">This option adds a long button press. (min. 750ms)</string>
    <string name="other">Other</string>
    <string name="cpu">Processor</string>
    <string name="settings">Settings</string>
    <string name="replacement_options">Replace</string>
    <string name="select_the_cpu_clock_output_for_the_overlay">Select the CPU clock output for the overlay.</string>
    <string name="cpu_clock_output">CPU clock output</string>
    <string name="this_option_adds_seconds_to_the_time">Show Seconds for the time in the overlay.</string>
    <string name="display_seconds">Seconds in time</string>
    <string name="hide_options">Hide</string>
    <string name="hide_the_left_overlay_completely">Hide the left overlay completely.</string>
    <string name="hide_left_overlay">Hide left overlay</string>
    <string name="hide_all_titles_in_the_overlay">Hide all titles in the overlay.</string>
    <string name="hide_all_titles">Hide all titles</string>
    <string name="hide_all_empty_lines_in_the_overlay">Hide all empty lines in the overlay.</string>
    <string name="hide_all_empty_lines">Hide all empty lines</string>
    <string name="hide_processor_title_in_the_overlay">Hide processor title in the overlay.</string>
    <string name="hide_processor_title">Hide processor title</string>
    <string name="hide_cpu_clock_in_the_overlay">Hide CPU clock in the overlay.</string>
    <string name="hide_cpu_clock">Hide CPU clock</string>
    <string name="hide_cpu_temperature_in_the_overlay">Hide CPU temperature in the overlay.</string>
    <string name="hide_cpu_temperature">Hide CPU temperature (ADB)</string>
    <string name="hide_cpu_governor_in_the_overlay">Hide CPU governor in the overlay.</string>
    <string name="hide_cpu_governor">Hide CPU governor</string>
    <string name="hide_other_title_in_the_overlay">Hide other title in the overlay.</string>
    <string name="hide_other_title">Hide other title</string>
    <string name="hide_time_in_the_overlay">Hide time in the overlay.</string>
    <string name="hide_time">Hide time</string>
    <string name="hide_empty_line">Hide empty line</string>
    <string name="hide_empty_line_between_processor_und_other">Hide empty line between processor und other.</string>
    <string name="temperature_request">CPU temperature request</string>
    <string name="temperature_request_summary">Off: ThermalService\nOn: HardwareProperties</string>
    <string name="temperature_unit">CPU temperature unit</string>
    <string name="temperature_unit_summary">Off: Celsius\nOn: Fahrenheit</string>
    <string name="cpu_temperature">CPU Temperature:</string>
</resources>